--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>Simple Popup</title>
+  <meta name="description" content="Create an HTML element for popup content">
+  <meta name="keywords" content="HTML,CSS,JavaScript, ES6">
+  <meta name="author" content="Arthur">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="favicon.ico" type="image/ico">
+  <link rel="icon" href="start.ico" type="image/ico">
 </head>
 
 <body>
+
+<div class="container">
+  <h1>HTML element for popup content</h1>
+</div>
 
 
 </body>
