Add @babel for compiling ES6, create popup Class and few methods

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
   <h1>HTML element for popup content</h1>
 </div>
 
+<div class="popup" id="popup" >Click me to toggle the popup!
+  <span class="popup-text" id="simplePopup">A Simple Popup!</span>
+</div>
 
 </body>
 
