--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,8 @@
   <h1>HTML element for popup content</h1>
 </div>
 
-<div class="popup" id="popup" >Click me to toggle the popup!
-  <span class="popup-text" id="simplePopup">A Simple Popup!</span>
-</div>
+<button id="open-popup-btn" >Click me to toggle the popup!</button>
+
 
 </body>
 
