JS, ES6 pure HTML, CSS, JS without frameworks/libraries popup script is ready.

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,10 @@
   <h1>HTML element for popup content</h1>
 </div>
 
-<button id="open-popup-btn" >Click me to toggle the popup!</button>
+<button id="open-popup-btn" class="open-popup-btn" >Click me to toggle the popup!</button>
 
 
 </body>
 
 </html>
+
